@@ -2,7 +2,7 @@ Package: MPsychoR
 Type: Package
 Title: Modern Psychometrics with R
 Version: 0.10-6
-Date: 2017-12-07
+Date: 2018-03-08
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email = "mair@fas.harvard.edu"))
 Maintainer: Patrick Mair <mair@fas.harvard.edu>
 Description: Supplementary materials and datasets for the book "Modern Psychometrics With R" (Mair, 2018, Springer useR! series).
