@@ -2,6 +2,15 @@
 \title{News for Package \pkg{smacof}}
 \encoding{UTF-8}
 
+\section{Changes in Version 1.10-4}{
+  \itemize{
+    \item verbose output in uniscale(). 
+    \item transform() exported. 
+    }
+}
+
+
+
 \section{Changes in Version 1.10-3}{
   \itemize{
     \item plot.smacofboot() updated.
